remove moz-focus-inner for now.... breaks the theme support (polymer bug).

--- a/css/px-app-nav.css
+++ b/css/px-app-nav.css
@@ -339,13 +339,6 @@ button[disabled], html input[disabled] {
   cursor: default; }
 
 /**
-   * Remove inner padding and border in Firefox 4+.
-   */
-button::-moz-focus-inner, input::-moz-focus-inner {
-  border: 0;
-  padding: 0; }
-
-/**
    * Address Firefox 4+ setting `line-height` on `input` using `!important` in
    * the UA stylesheet.
    */
@@ -2662,13 +2655,6 @@ html {
   */
 .btn + .btn {
   margin-left: 10px; }
-
-/**
-  * Fix a Firefox bug whereby `input type="submit"` gains 2px extra padding.
-  */
-.btn::-moz-focus-inner {
-  border: 0;
-  padding: 0; }
 
 /**
      * Buttons with no styles (good a11y practice to use <button> for actions rather than <a>.
